# python-tacoclient

./: README.md  requirements.txt  setup.cfg  setup.py
tacoclient/: shell.py
tacoclient/handler/: __init__.py  k8s.py
