[metadata]
name = python-tacoclient 
summary = TACO(SKT All Container Openstack) CLI client
description-file = README.md

author = SKT Open Compute Lab
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tacoclient
    tacoclient.cli

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[entry_points]
console_scripts =
    tacoclient = tacoclient.shell:main
tacoclient =
    taco = tacoclient.cli:TacoCommand
oslo.config.opts =
    tacoclient.conf = tacoclient.conf.opts:list_opts

[pbr]
warnerrors = True

[wheel]
universal = 1

[nosetests]
verbosity=3
with-doctest=1
